# smf

./: .clang-format  .clang_complete  .common_build.sh  .dir-locals.el  .gitignore  .gitmodules  .travis.yml  AUTHORS  BUILD  CMakeLists.txt  CMakeLists.txt.in  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  CodeOfConduct.md  ISSUE_TEMPLATE.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  Vagrantfile  WORKSPACE  appveyor.yml  compile  compile.sh  compile_debug  compile_release  cooking.sh  debug  install-deps.sh  package  r.sh  release  travis_build.sh  travis_deps.sh
demo_apps/cpp/: CMakeLists.txt
demo_apps/cpp/client/: main.cc
demo_apps/cpp/server/: main.cc
src/: CMakeLists.txt  hashing_utils.h  histogram.cc  histogram.h  histogram_seastar_utils.cc  histogram_seastar_utils.h  human_bytes_printing_utils.h  likely.h  log.h  macros.h  priority_manager.h  status_codes.h  test_runner.py  time_utils.h
src/adt/: flat_hash_map.h
src/afl_tests/rpc/: rpc.dict
src/benchmarks/: CMakeLists.txt
src/benchmarks/checksum_bench/: main.cc
src/benchmarks/core_balance/: main.cc
src/benchmarks/fbs_alloc/: CMakeLists.txt  kv.fbs  main.cc
src/benchmarks/hashing/: main.cc
src/benchmarks/topic_partition_hashing/: main.cc
src/chain_replication/: CMakeLists.txt  chain_replication_service.cc  chain_replication_service.h  chain_replication_utils.cc  chain_replication_utils.h
src/core/: CMakeLists.txt  README.md  compression.cc  failure_injector_recv_filter.cc  histogram.cc  histogram_seastar_utils.cc  lz4_filter.cc  random.cc  rpc.fbs  rpc_client.cc  rpc_connection_limits.cc  rpc_envelope.cc  rpc_handle_router.cc  rpc_letter.cc  rpc_recv_context.cc  rpc_server.cc  zstd_filter.cc
src/cr/: CMakeLists.txt  chain_replication_service.cc  chain_replication_service.h  chain_replication_utils.cc  chain_replication_utils.h  main.cc
src/demo_apps/: CMakeLists.txt
src/demo_apps/client/: main.cc
src/demo_apps/server/: main.cc
src/filesystem/: CMakeLists.txt  clock_pro.h  file_size_utils.cc  file_size_utils.h  lazy_file.cc  lazy_file.h  page_cache_bucket_allocator.h  page_cache_windowing_policy.h  wal.cc  wal.h  wal_clock_pro_cache.cc  wal_clock_pro_cache.h  wal_file_manager.cc  wal_file_manager.h  wal_file_name_mender.h  wal_file_walker.h  wal_head_file_functor.h  wal_impl_with_cache.cc  wal_impl_with_cache.h  wal_lcore_map.cc  wal_lcore_map.h  wal_mem_cache.h  wal_name_extractor_utils.cc  wal_name_extractor_utils.h  wal_name_parser.h  wal_opts.cc  wal_opts.h  wal_page_cache.cc  wal_page_cache.h  wal_partition_manager.cc  wal_partition_manager.h  wal_pretty_print_utils.cc  wal_pretty_print_utils.h  wal_ptid.h  wal_reader.cc  wal_reader.h  wal_reader_node.cc  wal_reader_node.h  wal_reader_offset_range.h  wal_requests.cc  (+22 more)
src/flatbuffers/: .gitignore  CMakeLists.txt  chain_replication.fbs  demo_service.fbs  fbs_typed_buf.h  flatbuffers_concepts.h  native_type_utils.h  raft.fbs  rpc.fbs  timestamp.fbs  wal.fbs
src/go/: CMakeLists.txt  Gopkg.toml  build.bash
src/go-smf/: CompressionFlags.go  DynamicHeader.go  client.go  dispatch_test.go  handle.go  rpc.fbs
src/go/smf/: BUILD.bazel  CMakeLists.txt  CompressionFlags.go  Header.go  HeaderBitFlags.go  PayloadHeaders.go  connection.go  debug.test  dispatch_test.go  header_test.go  header_utils.go  server.go  service.go
src/hashing/: CMakeLists.txt  hashing_utils.h
src/histogram/: CMakeLists.txt  histogram.cc  histogram.h  histogram_seastar_utils.cc  histogram_seastar_utils.h  unique_histogram_adder.h
src/include/smf/: compression.h  failure_injector_recv_filter.h  fbs_typed_buf.h  flatbuffers_concepts.h  histogram.h  histogram_seastar_utils.h  human_bytes.h  load_channel.h  load_generator.h  load_generator_args.h  load_generator_duration.h  log.h  lz4_filter.h  macros.h  native_type_utils.h  random.h  reconnect_client.h  rpc_client.h  rpc_connection.h  rpc_envelope.h  (+20 more)
src/integration_tests/: CMakeLists.txt  bad_msg.fbs  bad_svc.fbs  demo_service.fbs
src/java/: BUILD
src/platform/: CMakeLists.txt  log.h  macros.h
src/raft/: CMakeLists.txt  main.cc
src/rpc/: CMakeLists.txt  README.md  flatbuffers_concepts.h  futurize_utils.h  native_type_utils.h  periodic_rpc_stats_printer.h  rpc.fbs  rpc_client.cc  rpc_client.h  rpc_client_connection.h  rpc_client_connection_pool.h  rpc_client_stats.cc  rpc_client_stats.h  rpc_connection.h  rpc_connection_limits.cc  rpc_connection_limits.h  rpc_context.h  rpc_decoder.h  rpc_envelope.cc  rpc_envelope.h  rpc_envelope_utils.h  rpc_filter.h  rpc_handle_router.cc  rpc_handle_router.h  rpc_header_utils.h  rpc_incoming_filter.h  rpc_letter.cc  rpc_letter.h  rpc_letter_concepts.h  rpc_outgoing_filter.h  rpc_recv_context.cc  rpc_recv_context.h  rpc_recv_typed_context.h  rpc_request.h  rpc_send_context.h  rpc_server.cc  rpc_server.h  rpc_server_connection.h  rpc_server_stats.cc  rpc_server_stats.h  (+11 more)
src/seastar_io/: priority_manager.h
src/smf/: BUILD  EchoHandler.cpp  client.cc  histogram_seastar_utils.h  load_channel.h  load_generator.h  lz4_filter.h  main.cc  native_type_utils.h  person.h  rpc_connection.h  rpc_connection_limits.h  rpc_header_utils.h  rpc_letter.h  rpc_recv_context.h  rpc_recv_typed_context.h  rpc_server_connection.h  rpc_typed_envelope.h  server.cc  unique_histogram_adder.h  zstd_filter.h
src/smfb/: CMakeLists.txt  distributed_broker.h  main.cc  smfb_command_line_options.cc  smfb_command_line_options.h
src/smfc/: .gitignore  BUILD  CMakeLists.txt  README.md  codegen.cc  codegen.h  cpp_generator.cc  cpp_generator.h  crc.h  generator.h  go_generator.cc  go_generator.h  idl.cc  idl.h  java_generator.cc  java_generator.h  language.h  main.cc  python_generator.cc  python_generator.h  smf_file.h  smf_method.h  smf_printer.h  smf_service.h
src/test/: CMakeLists.txt  run_test.sh
src/test_utils/: non_root_port.h
src/tests/: CMakeLists.txt  histgen.cc  histogram_tests.cc  randomstr.cc
src/utils/: CMakeLists.txt  compression.cc  compression.h  human_bytes.cc  human_bytes.h  human_bytes_printing_utils.cc  human_bytes_printing_utils.h  random.cc  random.h  stdx.h  time_utils.h
(+303 files in other folders)
